fix mobile container right

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,9 @@ body{
   }
   .container-right {
     width: 70%;
+    @include mQMD{
+      width: 100%;
+    }
     .menuOpen{
       display: none;
       @include mQMD{
